[package]
name = "yral-canisters-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-agent.workspace = true
candid.workspace = true
serde.workspace = true
serde_bytes.workspace = true
tokio = { version = "1", features = ["time"] }

[build-dependencies]
serde.workspace = true
candid_parser = "0.1.4"
serde_json.workspace = true
convert_case = "0.6.0"
anyhow = "1.0.86"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
quote = "1.0.40"
prettyplease = "0.2"
proc-macro2 = "1.0.95"

[features]
full = ["backend", "sns", "services"]
backend = ["individual-user", "platform-orchestrator", "post-cache", "user-index", "user-info-service", "user-post-service"]
sns = ["sns-governance", "sns-ledger", "sns-root", "sns-swap", "sns-index"]
individual-user = []
platform-orchestrator = []
post-cache = []
user-index = []
sns-governance = []
sns-ledger = []
sns-root = []
sns-swap = []
sns-index = []
services = ["notification-store", "dedup-index"]
notification-store = []
dedup-index = []
user-info-service = []
user-post-service = []
