[package]
name = "hon-worker-common"
version = "0.1.0"
edition = "2024"

[dependencies]
candid.workspace = true
serde.workspace = true
identity = { workspace = true }
ic-agent = { workspace = true, optional = true }
num-bigint.workspace = true
url.workspace = true
thiserror.workspace = true
serde_with.workspace = true
limits.workspace = true

[features]
client = ["identity/ic-agent", "dep:ic-agent"]
