[package]
name = "ml-feed-cache"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "backfill-watched-videos"
path = "src/bin/backfill_watched_videos.rs"

[dependencies]
redis = { version = "0.29.1", features = [
    "tokio-rustls-comp",
    "tls-rustls-webpki-roots",
    "json",
] }
redis-macros = "0.5.2"
bb8 = "0.9.0"
bb8-redis = "0.21.0"
serde.workspace = true
serde_json.workspace = true
serde-redis = "0.14.0"
anyhow = "1.0.97"
utoipa = "5.3.1"
types = { workspace = true, features = ["redis"] }
log.workspace = true
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
