[package]
name = "yral-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
k256 = { workspace = true, default-features = false, features = ["jwk"] }
ic-agent.workspace = true
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = { version = "9.0.2" }
redis-macros = "0.5.2"
redis = { version = "0.29.1", features = ["json"] }
