[package]
name = "videogen-common"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
utoipa = "5.3.1"
yral-identity = { path = "../identity", optional = true }

[features]
default = []
client = []
ic = ["yral-identity"]
