[package]
name = "videogen-common"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
utoipa = "5.3.1"
yral-identity = { path = "../identity", optional = true }
enum_dispatch = "0.3"
yral-canisters-client = { path = "../canisters-client", optional = true }
ic-agent = { workspace = true, optional = true }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }

[features]
default = []
client = ["yral-canisters-client", "ic-agent"]
ic = ["yral-identity"]
